// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Corporation Item Component should match snapshot for corporation with no scopes 1`] = `
<div>
  <div
    class="rounded-sm bg-[var(--color-bg-panel)] text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] max-w-[345px] transition-transform hover:-translate-y-1 border-2 border-[var(--color-manufacturing-amber)]"
  >
    <div
      class="h-[200px] flex items-center justify-center bg-[var(--color-bg-void)] relative overflow-hidden"
    >
      <img
        alt="No Scopes Corp"
        class="h-[200px] object-contain p-4 drop-shadow-lg"
        src="https://images.evetech.net/corporations/11111/logo?size=256&tenant=tranquility"
      />
      <div
        class="absolute top-2 right-2"
        title="Scopes need updating"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert h-7 w-7 text-[var(--color-manufacturing-amber)] drop-shadow-lg"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
      </div>
    </div>
    <div
      class="p-4"
    >
      <div
        class="inline-flex items-center rounded-sm px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border border-[var(--color-border-dim)] text-[var(--color-text-secondary)] hover:border-[var(--color-border-active)] mb-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-building2 lucide-building-2 h-3 w-3 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 12h4"
          />
          <path
            d="M10 8h4"
          />
          <path
            d="M14 21v-3a2 2 0 0 0-4 0v3"
          />
          <path
            d="M6 10H4a2 2 0 0 0-2 2v7a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-2"
          />
          <path
            d="M6 21V5a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v16"
          />
        </svg>
        Corporation
      </div>
      <h3
        class="text-lg font-semibold text-[var(--color-primary-cyan)]"
      >
        No Scopes Corp
      </h3>
      <div
        class="flex items-center gap-2 mt-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert h-4 w-4 text-[var(--color-manufacturing-amber)]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <a
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border bg-transparent shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-8 rounded-sm px-3 text-xs text-[var(--color-manufacturing-amber)] border-[var(--color-manufacturing-amber)]/30"
          href="/api/corporations/add"
        >
          Re-authorize
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Corporation Item Component should match snapshot for outdated corporation 1`] = `
<div>
  <div
    class="rounded-sm bg-[var(--color-bg-panel)] text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] max-w-[345px] transition-transform hover:-translate-y-1 border-2 border-[var(--color-manufacturing-amber)]"
  >
    <div
      class="h-[200px] flex items-center justify-center bg-[var(--color-bg-void)] relative overflow-hidden"
    >
      <img
        alt="Outdated Corp"
        class="h-[200px] object-contain p-4 drop-shadow-lg"
        src="https://images.evetech.net/corporations/54321/logo?size=256&tenant=tranquility"
      />
      <div
        class="absolute top-2 right-2"
        title="Scopes need updating"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert h-7 w-7 text-[var(--color-manufacturing-amber)] drop-shadow-lg"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
      </div>
    </div>
    <div
      class="p-4"
    >
      <div
        class="inline-flex items-center rounded-sm px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border border-[var(--color-border-dim)] text-[var(--color-text-secondary)] hover:border-[var(--color-border-active)] mb-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-building2 lucide-building-2 h-3 w-3 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 12h4"
          />
          <path
            d="M10 8h4"
          />
          <path
            d="M14 21v-3a2 2 0 0 0-4 0v3"
          />
          <path
            d="M6 10H4a2 2 0 0 0-2 2v7a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-2"
          />
          <path
            d="M6 21V5a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v16"
          />
        </svg>
        Corporation
      </div>
      <h3
        class="text-lg font-semibold text-[var(--color-primary-cyan)]"
      >
        Outdated Corp
      </h3>
      <div
        class="flex items-center gap-2 mt-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert h-4 w-4 text-[var(--color-manufacturing-amber)]"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        <a
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border bg-transparent shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-8 rounded-sm px-3 text-xs text-[var(--color-manufacturing-amber)] border-[var(--color-manufacturing-amber)]/30"
          href="/api/corporations/add"
        >
          Re-authorize
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Corporation Item Component should match snapshot for up-to-date corporation 1`] = `
<div>
  <div
    class="rounded-sm border border-[var(--color-border-dim)] bg-[var(--color-bg-panel)] text-[var(--color-text-primary)] shadow hover:border-[var(--color-border-active)] hover:shadow-[var(--glow-cyan-sm)] max-w-[345px] transition-transform hover:-translate-y-1"
  >
    <div
      class="h-[200px] flex items-center justify-center bg-[var(--color-bg-void)] relative overflow-hidden"
    >
      <img
        alt="Test Corporation"
        class="h-[200px] object-contain p-4 drop-shadow-lg"
        src="https://images.evetech.net/corporations/98765/logo?size=256&tenant=tranquility"
      />
    </div>
    <div
      class="p-4"
    >
      <div
        class="inline-flex items-center rounded-sm px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border border-[var(--color-border-dim)] text-[var(--color-text-secondary)] hover:border-[var(--color-border-active)] mb-2"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-building2 lucide-building-2 h-3 w-3 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 12h4"
          />
          <path
            d="M10 8h4"
          />
          <path
            d="M14 21v-3a2 2 0 0 0-4 0v3"
          />
          <path
            d="M6 10H4a2 2 0 0 0-2 2v7a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2h-2"
          />
          <path
            d="M6 21V5a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v16"
          />
        </svg>
        Corporation
      </div>
      <h3
        class="text-lg font-semibold text-[var(--color-primary-cyan)]"
      >
        Test Corporation
      </h3>
    </div>
  </div>
</div>
`;
